--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <meta property="og:title" content="Hassan Fathy">
     <meta property="og:type" content="website">
     <!-- <meta property="og:url" content="https://hassanfathy10.github.io/Bondi_LandingPage/"> -->
+    <!-- Styles css -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css.map">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="assets/css/all.min.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/images/favicon.png">
     <title>HF_Watches_Store</title>
 </head>
 <body>
-    
+    <script src="assets/js/all.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
