--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand text-white fw-bold" href="#"><i class="fa-solid fa-clock"></i> Rolex</a>
+            <a class="navbar-brand fw-bold" href="#"><i class="fa-solid fa-clock"></i> Rolex</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
             </button>
@@ -42,12 +42,8 @@
                     <a class="nav-link p-lg-3" href="#new">New</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link p-lg-3" href="#"><i class="fa-solid fa-bag-shopping"></i></a>
-                </li>
-            </ul>
             </div>
+            <a class="icon p-lg-3 ms-auto" href="#"><i class="fa-solid fa-bag-shopping"></i></a>
         </div>
     </nav>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
