--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-5 mb-2 mb-lg-0">
+            <ul class="navbar-nav align-items-center ms-5 mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link p-lg-3 active" aria-current="page" href="#">Home</a>
                 </li>
