--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="container">
             <a class="navbar-brand fw-bold" href="#"><i class="fa-solid fa-clock"></i> Rolex</a>
             <div class="d-flex justify-content-center align-items-center gap-3">
-                <a class="icon p-lg-3" href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                <a class="icon p-lg-3 d-lg-none d-sm-block d-md-block" href="#"><i class="fa-solid fa-bag-shopping"></i></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
                 </button>
             </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav align-items-center ms-5 mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link p-lg-3 active" aria-current="page" href="#">Home</a>
                 </li>
@@ -44,10 +44,22 @@
                 <li class="nav-item">
                     <a class="nav-link p-lg-3" href="#new">New</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link p-lg-3 d-none d-lg-block" href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </li>
             </ul>
             </div>
         </div>
     </nav>
+    <section class="landing pt-5 pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
 </body>
