--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
     <section class="landing text-center pt-5 pb-5">
         <div class="container">
             <div class="row align-items-center">
-                <div class="icon col-lg-2 col-md-2 position-absolute fs-4">
+                <div class="col-lg-4 col-md-4 col-sm-8 text-md-start mt-5 mb-5">
+                    <h1 class="text-white mb-4">NEW WATCH COLLECTIONSB720</h1>
+                    <p class="text-white-50">Latest arrival of the new imported watches of the B720 series, with amodern and resistant design.</p>
+                    <p class="price mb-5 fs-5 fw-bolder">$1245</p>
+                    <a class="btn dis-btn fs-6 fw-semibold mb-3" href="#">Discover</a><a class="btn main-btn text-white fw-semibold fs-6 mb-3" href="#">ADD TO CART</a>
+                </div>
+                <div class="icon col-lg-4 col-md-3 col-sm-4 d-flex justify-content-center align-items-center gap-4 fs-4 mb-4">
                     <a href="#" aria-label="Link to Facebook"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#" aria-label="Link to Twitter"><i class="fa-brands fa-twitter text-info"></i></a>
                     <a href="#" aria-label="Link to Instgram"><i class="fa-brands fa-instagram text-danger"></i></a>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 text-md-start mt-5 mb-5">
-                    <h1 class="text-white mb-4">NEW WATCH COLLECTIONSB720</h1>
-                    <p class="text-white-50">Latest arrival of the new imported watches of the B720 series, with amodern and resistant design.</p>
-                    <p class="price mb-5 fs-5 fw-bolder">$1245</p>
-                    <a class="btn dis-btn mb-3" href="#">Discover</a><a class="btn main-btn mb-3" href="#">Discover</a>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 ms-auto">
+                <div class="col-lg-4 col-md-5 col-sm-12 ms-auto">
                     <img class="watch img-fluid img-thumbnail" src="assets/images/home.png" alt="">
                 </div>
             </div>
