--- a/index.html
+++ b/index.html
@@ -71,6 +71,43 @@
             </div>
         </div>
     </section>
+    <section class="featured text-center pt-5 pb-5" id="featured">
+        <div class="container">
+            <h2 class="main-title text-white fs-4 mb-5">Featured</h2>
+            <div class="row">
+                <div class="col-lg-4 position-relative mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-featured img-fluid mt-5" src="assets/images/featured1.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">JAZZMASTER</h3>
+                        <p class="price fs-5 fw-bold mb-5">$1050</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                        <div class="position-absolute top-0 start-0">
+                            <p class="text-white fs-5 ">SALE</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 position-relative mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-featured1 img-fluid mt-5" src="assets/images/featured2.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">INGERSOLL</h3>
+                        <p class="price fs-5 fw-bold mb-5">$250</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 position-relative mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-featured img-fluid mt-5" src="assets/images/featured3.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">ROSE GOLD</h3>
+                        <p class="price fs-5 fw-bold mb-5">$890</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                
+            </div>
+        </div>
+    </section>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
 </body>
