--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <h3 class="text-white fs-5 fw-bold mt-4">JAZZMASTER</h3>
                         <p class="price fs-5 fw-bold mb-5">$1050</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
-                        <div class="position-absolute top-0 start-0">
-                            <p class="text-white fs-5 ">SALE</p>
+                        <div class="position-absolute start-0">
+                            <p class="sale text-white fs-5 p-3 ">SALE</p>
                         </div>
                     </div>
                 </div>
