--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="featured text-center pt-5 pb-5" id="featured">
         <div class="container">
             <h2 class="main-title text-white fs-4 mb-5">Featured</h2>
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col-lg-4 position-relative mt-5">
                     <div class="card align-items-center">
                         <img class="img-featured img-fluid mt-5" src="assets/images/featured1.png" alt="">
@@ -92,6 +92,9 @@
                         <h3 class="text-white fs-5 fw-bold mt-4">INGERSOLL</h3>
                         <p class="price fs-5 fw-bold mb-5">$250</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                        <div class="position-absolute start-0">
+                            <p class="sale text-white fs-5 p-3 ">SALE</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 position-relative mt-5">
@@ -100,11 +103,16 @@
                         <h3 class="text-white fs-5 fw-bold mt-4">ROSE GOLD</h3>
                         <p class="price fs-5 fw-bold mb-5">$890</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                        <div class="position-absolute start-0">
+                            <p class="sale text-white fs-5 p-3 ">SALE</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                
+                <div class="col-lg-4">
+                    <img class="" src="assets/images/story.png" alt="">
+                </div>
             </div>
         </div>
     </section>
