--- a/index.html
+++ b/index.html
@@ -109,9 +109,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="" src="assets/images/story.png" alt="">
+            <div class="row pt-5">
+                <div class="col-lg-8">
+                    <img class="img-thumbnail p-5 w-75" src="assets/images/story.png" alt="">
+                </div>
+                <div class="text text-start col-lg-4">
+                    <h1 class="text-white lh-lg mt-3">OUR STORY</h1>
+                    <h2 class="text-white lh-lg">Inspirational Watch of this year</h2>
+                    <p class="text-white-50 mb-5">The Latest and modern watches of this year, is available in various presentations in this store, discover them now.</p>
+                    <a class="btn dis-btn fs-6 fw-semibold mb-3" href="#">Discover</a>
                 </div>
             </div>
         </div>
