--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     </section>
     <section class="featured text-center pt-5 pb-5" id="featured">
         <div class="container">
-            <h2 class="main-title text-white fs-4 mb-5">Featured</h2>
+            <h2 class="main-title text-white fs-3 mb-5">Featured</h2>
             <div class="row justify-content-center mb-5">
-                <div class="col-lg-3 position-relative mt-5">
+                <div class="col-lg-3 mt-5">
                     <div class="card align-items-center">
-                        <img class="img-featured img-fluid mt-5" src="assets/images/featured1.png" alt="">
+                        <img class="img-card img-fluid mt-5" src="assets/images/featured1.png" alt="">
                         <h3 class="text-white fs-5 fw-bold mt-4">JAZZMASTER</h3>
                         <p class="price fs-5 fw-bold mb-5">$1050</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
@@ -86,9 +86,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 position-relative mt-5">
+                <div class="col-lg-3 mt-5">
                     <div class="card align-items-center">
-                        <img class="img-featured1 img-fluid mt-5" src="assets/images/featured2.png" alt="">
+                        <img class="img-card1 img-fluid mt-5" src="assets/images/featured2.png" alt="">
                         <h3 class="text-white fs-5 fw-bold mt-4">INGERSOLL</h3>
                         <p class="price fs-5 fw-bold mb-5">$250</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
@@ -97,9 +97,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 position-relative mt-5">
+                <div class="col-lg-3 mt-5">
                     <div class="card align-items-center">
-                        <img class="img-featured img-fluid mt-5" src="assets/images/featured3.png" alt="">
+                        <img class="img-card img-fluid mt-5" src="assets/images/featured3.png" alt="">
                         <h3 class="text-white fs-5 fw-bold mt-4">ROSE GOLD</h3>
                         <p class="price fs-5 fw-bold mb-5">$890</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
@@ -118,6 +118,53 @@
                     <h2 class="text-white lh-lg">Inspirational Watch of this year</h2>
                     <p class="text-white-50 mb-5">The Latest and modern watches of this year, is available in various presentations in this store, discover them now.</p>
                     <a class="btn dis-btn fs-6 fw-semibold mb-3" href="#">Discover</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="products text-center pt-5 pb-5" id="prouducts">
+        <div class="container">
+            <h1 class="text-white fs-3 mt-4 mb-5">Products</h1>
+            <div class="row">
+                <div class="col-lg-3 mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-card img-fluid mt-5" src="assets/images/product1.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">SPIRIT ROSE</h3>
+                        <p class="price fs-5 fw-bold mb-5">$1500</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-card2 img-fluid mt-5" src="assets/images/product2.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">KHAKI PILOT</h3>
+                        <p class="price fs-5 fw-bold mb-5">$1350</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-card2 img-fluid mt-5" src="assets/images/product3.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">JUBILEE BLACK</h3>
+                        <p class="price fs-5 fw-bold mb-5">$870</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-card img-fluid mt-5" src="assets/images/product4.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">FOSIL ME3</h3>
+                        <p class="price fs-5 fw-bold mb-5">$630</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5">
+                    <div class="card align-items-center">
+                        <img class="img-card img-fluid mt-5" src="assets/images/product5.png" alt="">
+                        <h3 class="text-white fs-5 fw-bold mt-4">DUCHEN</h3>
+                        <p class="price fs-5 fw-bold mb-5">$950</p>
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
                 </div>
             </div>
         </div>
