--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <section class="products text-center pt-5 pb-5" id="prouducts">
         <div class="container">
             <h1 class="text-white fs-3 mt-4 mb-5">Products</h1>
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col-lg-3 mt-5">
                     <div class="card align-items-center">
                         <img class="img-card img-fluid mt-5" src="assets/images/product1.png" alt="">
@@ -164,6 +164,34 @@
                         <h3 class="text-white fs-5 fw-bold mt-4">DUCHEN</h3>
                         <p class="price fs-5 fw-bold mb-5">$950</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row pt-5">
+                <div class="col-lg-5 text-start">
+                    <div id="carouselExample" class="carousel slide">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <p><i class="icon fa-solid fa-quote-left"></i></p>
+                                <p class="text-white-50">They are the best watches that one acquires, also they are always with the latest news and trends, with a very comfortable price and especially with the attention you receive, they are always attentive to your questions.</p>
+                                <h3 class="text-white fs-5">May 25.2023</h3>
+                                <img class="img-fluid" src="assets/images/testimonial1.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="assets/images/testimonial2.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid" src="assets/images/testimonial3.jpg" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</spa>
+                        </button>
                     </div>
                 </div>
             </div>
