--- a/index.html
+++ b/index.html
@@ -168,27 +168,42 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-lg-5 text-start">
+                <div class="col-lg-6 text-center">
                     <div id="carouselExample" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <p><i class="icon fa-solid fa-quote-left"></i></p>
                                 <p class="text-white-50">They are the best watches that one acquires, also they are always with the latest news and trends, with a very comfortable price and especially with the attention you receive, they are always attentive to your questions.</p>
-                                <h3 class="text-white fs-5">May 25.2023</h3>
-                                <img class="img-fluid" src="assets/images/testimonial1.jpg" class="d-block w-100" alt="...">
+                                <h3 class="text-white fs-5 mb-5">May 25.2023</h3>
+                                <div class="d-flex justify-content-center gap-5">
+                                    <img class="img-director" src="assets/images/testimonial1.jpg" class="d-block w-100" alt="">
+                                    <div class="d-flex flex-column text-start row-gap-2 mt-3">     
+                                        <h1 class="text-white fs-4">Lee Doe</h1>
+                                        <p class="text-white-50">Director of a Company</p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="img-fluid" src="assets/images/testimonial2.jpg" class="d-block w-100" alt="...">
+                                <p><i class="icon fa-solid fa-quote-left"></i></p>
+                                <p class="text-white-50">They are the best watches that one acquires, also they are always with the latest news and trends, with a very comfortable price and especially with the attention you receive, they are always attentive to your questions.</p>
+                                <h3 class="text-white fs-5 mb-5">May 25.2023</h3>
+                                <div class="d-flex justify-content-center gap-5">
+                                    <img class="img-director" src="assets/images/testimonial2.jpg" class="d-block w-100" alt="">
+                                    <div class="d-flex flex-column text-start row-gap-2 mt-3">     
+                                        <h1 class="text-white fs-4">Samantha Mey</h1>
+                                        <p class="text-white-50">Director of a Company</p>
+                                    </div>
+                                </div>                            
                             </div>
                             <div class="carousel-item">
-                                <img class="img-fluid" src="assets/images/testimonial3.jpg" class="d-block w-100" alt="...">
+                                <img class="img-director" src="assets/images/testimonial3.jpg" class="d-block w-100" alt="">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <button class="carousel-control-prev pt-5" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <button class="carousel-control-next pt-5" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</spa>
                         </button>
