--- a/index.html
+++ b/index.html
@@ -196,7 +196,16 @@
                                 </div>                            
                             </div>
                             <div class="carousel-item">
-                                <img class="img-director" src="assets/images/testimonial3.jpg" class="d-block w-100" alt="">
+                                <p><i class="icon fa-solid fa-quote-left"></i></p>
+                                <p class="text-white-50">They are the best watches that one acquires, also they are always with the latest news and trends, with a very comfortable price and especially with the attention you receive, they are always attentive to your questions.</p>
+                                <h3 class="text-white fs-5 mb-5">May 25.2023</h3>
+                                <div class="d-flex justify-content-center gap-5">
+                                    <img class="img-director" src="assets/images/testimonial3.jpg" class="d-block w-100" alt="">
+                                    <div class="d-flex flex-column text-start row-gap-2 mt-3">     
+                                        <h1 class="text-white fs-4">Raul Zaman</h1>
+                                        <p class="text-white-50">Director of a Company</p>
+                                    </div>
+                                </div>                            
                             </div>
                         </div>
                         <button class="carousel-control-prev pt-5" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
