--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-6 swipe text-center m-5">
                     <div id="carouselExample" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -217,6 +217,9 @@
                             <span class="visually-hidden">Next</spa>
                         </button>
                     </div>
+                </div>
+                <div class="col-lg-4 m-5">
+                    <img class="img-thumbnail" src="assets/images/testimonial.png" alt="">
                 </div>
             </div>
         </div>
