--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <p class="price fs-5 fw-bold mb-5">$1050</p>
                         <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
                         <div class="position-absolute start-0">
-                            <p class="sale text-white fs-6 fw-semibold p-3 ">SALE</p>
+                            <p class="sale text-white fs-6 fw-semibold p-3">SALE</p>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-lg-6 swipe text-center m-5">
+                <div class="col-lg-6 swipe text-center mb-5">
                     <div id="carouselExample" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -218,8 +218,27 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-lg-4 m-5">
+                <div class="col-lg-4 mt-1">
                     <img class="img-thumbnail" src="assets/images/testimonial.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="arrivals text-center pt-5 pb-5">
+        <div class="container">
+            <h1 class="text-white fs-3 mt-4 mb-5">NEW ARRIVALS</h1>
+            <div class="row align-items-center">
+                <div class="subscribe-bg d-flex justify-content-center align-items-center mt-5">
+                    <div class="col-lg-4 text-md-start m-5">
+                        <h1 class=" lh-lg">Subscribe Our Newsletter</h1>
+                        <p class="text-black-50 mb-5"> Don't miss out on your discounts. Subscribe to our email newsletter to get the best offers, discounts, coupons, gifts and much more.</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <input class="border-0 w-50 p-2" type="email" placeholder="Enter your email">
+                    </div>
+                    <div class="col-lg-2">
+                        <a class="btn main-btn text-white fw-semibold fs-6 mb-1" href="#">ADD TO CART</a>
+                    </div>
                 </div>
             </div>
         </div>
