subscribe footer sections

--- a/index.html
+++ b/index.html
@@ -224,21 +224,58 @@
             </div>
         </div>
     </section>
-    <section class="arrivals text-center pt-5 pb-5">
+    <section class="arrivals text-center pt-5 pb-5" >
+        <h1 class="text-white fs-3 mt-4 mb-5">NEW ARRIVALS</h1>
+    </section>
+    <section class="subscribe text-center pt-5 pb-5">
         <div class="container">
-            <h1 class="text-white fs-3 mt-4 mb-5">NEW ARRIVALS</h1>
-            <div class="row align-items-center">
-                <div class="subscribe-bg d-flex justify-content-center align-items-center mt-5">
-                    <div class="col-lg-4 text-md-start m-5">
-                        <h1 class=" lh-lg">Subscribe Our Newsletter</h1>
+            <div class="row align-items-center ">
+                    <div class="col-lg-6 text-lg-start">
+                        <h1 class="mb-3 lh-lg">Subscribe Our Newsletter</h1>
                         <p class="text-black-50 mb-5"> Don't miss out on your discounts. Subscribe to our email newsletter to get the best offers, discounts, coupons, gifts and much more.</p>
                     </div>
                     <div class="col-lg-6">
-                        <input class="border-0 w-50 p-2" type="email" placeholder="Enter your email">
+                        <input class="border-0 w-75 mb-3 p-2" type="email" placeholder="Enter your email">
+                        <a class="btn subscribe-btn text-white fw-medium fs-6 mb-1 p-3" href="#">Subscribe</a>
                     </div>
-                    <div class="col-lg-2">
-                        <a class="btn main-btn text-white fw-semibold fs-6 mb-1" href="#">ADD TO CART</a>
-                    </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer pt-5 pb-5">
+        <div class="container">
+            <div class="row text-start">
+                <div class="col-lg-3">
+                    <h5 class="text-white mb-4">Our Information</h5>
+                    <p class="text-white-50">Egypt</p>
+                    <p class="text-white-50">Alexandria - Agami</p>
+                    <p class="text-white-50">01143814036</p>
+                </div>
+                <div class="col-lg-3">
+                    <h5 class="text-white mb-4">About Us</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none" href="#">Support Center</a></li>
+                        <li><a class="text-decoration-none" href="#">Customer Support</a></li>
+                        <li><a class="text-decoration-none" href="#">About Us</a></li>
+                        <li><a class="text-decoration-none" href="#">Copy Right</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h5 class="text-white mb-4">Product</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none" href="#">Road bikes</a></li>
+                        <li><a class="text-decoration-none" href="#">Mountain bikes</a></li>
+                        <li><a class="text-decoration-none" href="#">Electtic</a></li>
+                        <li><a class="text-decoration-none" href="#">Accesories</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h5 class="text-white mb-4 d-flex justify-content-center">Social</h5>
+                    <a class="btn btn-primary rounded-pill w-100 p-3 fw-semibold mb-4" href="mailto:Hassanfathy460@gmail.com">Hassanfathy460@gmail.com</a>
+                    <ul class="list-unstyled d-flex justify-content-center gap-5 fs-3">
+                        <li><a class="text-decoration-none text-light" href="https://hassanfathy10.github.io/HF_Portfolio/" aria-label="Link to Website"><i class="fa-solid fa-house"></i></a></li>
+                        <li><a class="text-decoration-none" href="https://www.linkedin.com/in/hassan-fathy/" aria-label="Link to Linkedin"><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a class="text-decoration-none text-white" href="https://github.com/HassanFathy10" aria-label="Link to Github"><i class="fa-brands fa-github"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
