--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 </div>
                 <div class="col-lg-3">
                     <h5 class="text-white mb-4">About Us</h5>
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled lh-lg">
                         <li><a class="text-decoration-none" href="#">Support Center</a></li>
                         <li><a class="text-decoration-none" href="#">Customer Support</a></li>
                         <li><a class="text-decoration-none" href="#">About Us</a></li>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="col-lg-3">
                     <h5 class="text-white mb-4">Product</h5>
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled lh-lg">
                         <li><a class="text-decoration-none" href="#">Road bikes</a></li>
                         <li><a class="text-decoration-none" href="#">Mountain bikes</a></li>
                         <li><a class="text-decoration-none" href="#">Electtic</a></li>
