swipe slide and end project

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="row pt-5">
                 <div class="col-lg-6 swipe text-center mb-5">
-                    <div id="carouselExample" class="carousel slide">
+                    <div id="carouselExample" class="carousel slide" data-bs-touch="true">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <p><i class="icon fa-solid fa-quote-left"></i></p>
@@ -226,6 +226,98 @@
     </section>
     <section class="arrivals text-center pt-5 pb-5" >
         <h1 class="text-white fs-3 mt-4 mb-5">NEW ARRIVALS</h1>
+        <div class="row">
+                <swiper-container class="mySwiper" space-between="30" pagination="true" pagination-clickable="true" slides-per-view="3" centered-slides="true">
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new1.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">LONGINES ROSE</h3>
+                                <p class="price fs-5 fw-bold mb-5">$980</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new2.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">JAZZMASTER</h3>
+                                <p class="price fs-5 fw-bold mb-5">$1150</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new3.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">DREYFUSS GOLD</h3>
+                                <p class="price fs-5 fw-bold mb-5">$750</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new4.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">PORTUGUESE ROSE</h3>
+                                <p class="price fs-5 fw-bold mb-5">$1590</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new1.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">LONGINES ROSE</h3>
+                                <p class="price fs-5 fw-bold mb-5">$980</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new2.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">JAZZMASTER</h3>
+                                <p class="price fs-5 fw-bold mb-5">$1150</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new3.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">DREYFUSS GOLD</h3>
+                                <p class="price fs-5 fw-bold mb-5">$750</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="col-lg-3 w-100">
+                            <div class="card arrivals-card align-items-center">                                
+                                <img class="img-card mt-5" src="assets/images/new4.png" alt="">
+                                <h3 class="text-white fs-5 fw-bold mt-4">PORTUGUESE ROSE</h3>
+                                <p class="price fs-5 fw-bold mb-5">$1590</p>
+                                <a class="btn main-btn text-white fw-semibold fs-6 mb-5" href="#">ADD TO CART</a>
+                                <p class="new text-white fs-6 fw-semibold p-3">NEW</p>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                </swiper-container>
+        </div>
     </section>
     <section class="subscribe text-center pt-5 pb-5">
         <div class="container">
@@ -282,5 +374,6 @@
     </section>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 </body>
 </html>
