--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Hassan Fathy">
     <meta property="og:type" content="website">
-    <!-- <meta property="og:url" content="https://hassanfathy10.github.io/Bondi_LandingPage/"> -->
+    <meta property="og:url" content="https://hassanfathy10.github.io/HF_Watches_Store/">
     <!-- Styles css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
