--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
                     <h5 class="text-white mb-4 d-flex justify-content-center">Social</h5>
                     <a class="btn btn-primary rounded-pill w-100 p-3 fw-semibold mb-4" href="mailto:Hassanfathy460@gmail.com" target="_blank" rel="noopener no-referrer" aria-label="Link to Email">Hassanfathy460@gmail.com</a>
                     <ul class="list-unstyled d-flex justify-content-center gap-5 fs-3">
-                        <li><a class="text-decoration-none" href="https://hassanfathy10.github.io/HF_Portfolio/" target="_blank" rel="noopener no-referrer" aria-label="Link to Website"><i class="fa-solid fa-house text-danger"></i></a></li>
-                        <li><a class="text-decoration-none" href="https://www.linkedin.com/in/hassan-fathy/" target="_blank" rel="noopener no-referrer" aria-label="Link to Linkedin"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a class="text-decoration-none" href="https://github.com/HassanFathy10" target="_blank" rel="noopener no-referrer" aria-label="Link to Github"><i class="fa-brands fa-github text-white"></i></a></li>
+                        <li><a class="text-decoration-none" href="https://hassanfathy10.github.io/HF_Portfolio/" target="_blank" rel="noopener no-referrer" aria-label="Link to Website"><i class="fa-solid fa-house text-danger fs-4"></i></a></li>
+                        <li><a class="text-decoration-none" href="https://www.linkedin.com/in/hassan-fathy/" target="_blank" rel="noopener no-referrer" aria-label="Link to Linkedin"><i class="fa-brands fa-linkedin fs-4"></i></a></li>
+                        <li><a class="text-decoration-none" href="https://github.com/HassanFathy10" target="_blank" rel="noopener no-referrer" aria-label="Link to Github"><i class="fa-brands fa-github text-white fs-4"></i></a></li>
                     </ul>
                 </div>
             </div>
