--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
         </div>
     </section>
-    <section class="footer pt-5 pb-5">
+    <footer class="footer pt-5 pb-5">
         <div class="container">
             <div class="row text-start">
                 <div class="col-lg-3">
@@ -371,7 +371,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
