--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </div>
     </section>
-    <section class="products text-center pt-5 pb-5" id="prouducts">
+    <section class="products text-center pt-5 pb-5" id="products">
         <div class="container">
             <h1 class="text-white fs-3 mt-4 mb-5">Products</h1>
             <div class="row mb-5">
@@ -224,7 +224,7 @@
             </div>
         </div>
     </section>
-    <section class="arrivals text-center pt-5 pb-5" >
+    <section class="arrivals text-center pt-5 pb-5" id="new">
         <h1 class="text-white fs-3 mt-4 mb-5">NEW ARRIVALS</h1>
         <div class="row">
                 <swiper-container class="mySwiper" space-between="30" pagination="true" pagination-clickable="true" slides-per-view="1.5" centered-slides="true" >
