--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.png">
+    <!-- title -->
     <title>HF_Watches_Store</title>
 </head>
 <body>
